--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 :root {
   --color-primary: #f2f2f2;
@@ -22,6 +22,11 @@ body {
 .section {
   padding: 30px 150px;
 }
+
 a {
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
 }
