--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -16,7 +16,10 @@
 
 .post__image img {
   border-radius: 5px;
+  width: 100%;
+  height: 200px;
 }
+
 .post__content h2 {
   font-size: 1.4rem;
   color: var(--title-color);
